--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,7 @@
 **/wandb/
 **/models/
 **/backup/
+**/log_profiling/
 # except models with name starting with @
 !**/models/**/@*/
 !**/models/**/@*/**
